--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,7 +26,7 @@ body {
 #search-box:hover,
 #search-box:focus {
   outline: none;
-  border: 2px solid transparent;
+  /* border: 2px solid transparent; */
   border-image: linear-gradient(to right, #5976fa , #51d5f7,#eb81d4);
   border-image-slice: 1;
   border-radius: 10px;
